@@ -1,34 +1,24 @@
 package com.chef.william.service;
 
 import com.chef.william.dto.IngredientDTO;
-import com.chef.william.dto.NutritionDTO;
-import com.chef.william.dto.SupermarketDiscoveryDTO;
 import com.chef.william.dto.IngredientStoreListingDTO;
-import com.chef.william.exception.ResourceNotFoundException;
+import com.chef.william.dto.SupermarketDiscoveryDTO;
 import com.chef.william.exception.BusinessException;
-import com.chef.william.model.CitySupermarket;
+import com.chef.william.exception.ResourceNotFoundException;
 import com.chef.william.model.Ingredient;
-import com.chef.william.model.IngredientStoreListing;
-import com.chef.william.model.enums.Nutrients;
-import com.chef.william.model.Nutrition;
-import com.chef.william.model.enums.Unit;
-import com.chef.william.model.User;
-import com.chef.william.repository.CitySupermarketRepository;
 import com.chef.william.repository.IngredientRepository;
 import com.chef.william.repository.IngredientStoreListingRepository;
-import com.chef.william.service.discovery.SupermarketDiscoveryService;
+import com.chef.william.service.ingredient.IngredientDiscoveryFacade;
+import com.chef.william.service.ingredient.IngredientSearchService;
+import com.chef.william.service.mapper.IngredientMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
-import java.util.Locale;
-import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
@@ -36,14 +26,24 @@ public class IngredientService {
 
     private final IngredientRepository ingredientRepository;
     private final IngredientStoreListingRepository ingredientStoreListingRepository;
-    private final SupermarketDiscoveryService supermarketDiscoveryService;
+    private final IngredientMapper ingredientMapper;
+    private final IngredientSearchService ingredientSearchService;
+    private final IngredientDiscoveryFacade ingredientDiscoveryFacade;
 
     @Transactional
     public IngredientDTO createIngredient(IngredientDTO dto) {
         Ingredient ingredient = new Ingredient();
-        mapToEntity(dto, ingredient);
+        ingredientMapper.updateEntityFromDto(dto, ingredient);
         ingredient = ingredientRepository.save(ingredient);
-        return mapToDto(ingredient);
+        return ingredientMapper.toDto(ingredient);
+    }
+
+    @Transactional
+    public List<IngredientDTO> createIngredients(List<IngredientDTO> dtos) {
+        validateBulkCreatePayload(dtos);
+        return dtos.stream()
+                .map(this::createIngredient)
+                .toList();
     }
 
 
@@ -59,23 +59,23 @@ public class IngredientService {
         Ingredient ingredient = ingredientRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Ingredient not found with id: " + id));
 
-        mapToEntity(dto, ingredient);
+        ingredientMapper.updateEntityFromDto(dto, ingredient);
         ingredient = ingredientRepository.save(ingredient);
-        return mapToDto(ingredient);
+        return ingredientMapper.toDto(ingredient);
     }
 
     @Transactional(readOnly = true)
     public IngredientDTO getIngredientById(Long id) {
         Ingredient ingredient = ingredientRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Ingredient not found with id: " + id));
-        return mapToDto(ingredient);
+        return ingredientMapper.toDto(ingredient);
     }
 
     @Transactional(readOnly = true)
     public List<IngredientDTO> getAllIngredients() {
         return ingredientRepository.findAll().stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .map(ingredientMapper::toDto)
+                .toList();
     }
 
     @Transactional
@@ -91,116 +91,6 @@ public class IngredientService {
         ingredientRepository.delete(ingredient);
     }
 
-    // Helper: DTO → Entity (used for both create and update)
-    private void mapToEntity(IngredientDTO dto, Ingredient entity) {
-        entity.setName(dto.getName());
-        entity.setCategory(dto.getCategory());
-        entity.setDescription(dto.getDescription());
-        entity.setServingAmount(dto.getServingAmount());
-
-        // Handle servingUnit (assuming entity stores String abbreviation)
-        entity.setServingUnit(dto.getServingUnit().getAbbreviation());
-
-        // === SMART NUTRITION MERGE ===
-        if (dto.getNutrients() != null) {
-            // Map existing nutrients by type for quick lookup
-            Map<Nutrients, Nutrition> existingMap = entity.getNutritionList().stream()
-                    .collect(Collectors.toMap(Nutrition::getNutrient, n -> n));
-
-            // Collect nutrient types from DTO (to know what to keep)
-            Set<Nutrients> dtoNutrientTypes = dto.getNutrients().stream()
-                    .map(NutritionDTO::getNutrient)
-                    .collect(Collectors.toSet());
-
-            // Remove existing nutrients not present in DTO (orphanRemoval will delete them)
-            entity.getNutritionList().removeIf(n -> !dtoNutrientTypes.contains(n.getNutrient()));
-
-            // Merge/Update/Add from DTO
-            for (NutritionDTO nDto : dto.getNutrients()) {
-                Nutrition nutrition = existingMap.get(nDto.getNutrient());
-
-                if (nutrition == null) {
-                    // New nutrient
-                    nutrition = new Nutrition();
-                    nutrition.setIngredient(entity);  // Bidirectional link
-                    entity.getNutritionList().add(nutrition);
-                }
-
-                // Update fields (for both existing and new)
-                nutrition.setNutrient(nDto.getNutrient());
-                nutrition.setValue(nDto.getValue());
-                nutrition.setUnit(nDto.getUnit());
-            }
-        } else {
-            // If nutrients null/empty in DTO → clear all
-            entity.getNutritionList().clear();
-        }
-    }
-
-    // Helper: Entity → DTO
-    private IngredientDTO mapToDto(Ingredient entity) {
-        IngredientDTO dto = new IngredientDTO();
-        dto.setId(entity.getId());
-        dto.setName(entity.getName());
-        dto.setCategory(entity.getCategory());
-        dto.setDescription(entity.getDescription());
-        dto.setServingAmount(entity.getServingAmount());
-        Unit servingUnit = Unit.fromAbbreviation(entity.getServingUnit());
-        if (servingUnit == null) {
-            throw new BusinessException("Unsupported serving unit stored for ingredient id " + entity.getId() +
-                    ": " + entity.getServingUnit());
-        }
-        dto.setServingUnit(servingUnit);
-
-        dto.setNutrients(entity.getNutritionList().stream()
-                .map(n -> {
-                    NutritionDTO nDto = new NutritionDTO();
-                    nDto.setId(n.getId());
-                    nDto.setNutrient(n.getNutrient());
-                    nDto.setValue(n.getValue());
-                    nDto.setUnit(n.getUnit());
-                    return nDto;
-                })
-                .collect(Collectors.toList()));
-
-        dto.setNearbyStoreListings(entity.getStoreListings().stream()
-                .map(this::mapStoreListingToDto)
-                .sorted((left, right) -> {
-                    if (left.getDistanceKm() == null && right.getDistanceKm() == null) {
-                        return 0;
-                    }
-                    if (left.getDistanceKm() == null) {
-                        return 1;
-                    }
-                    if (right.getDistanceKm() == null) {
-                        return -1;
-                    }
-                    return left.getDistanceKm().compareTo(right.getDistanceKm());
-                })
-                .collect(Collectors.toList()));
-
-        return dto;
-    }
-
-    private IngredientStoreListingDTO mapStoreListingToDto(IngredientStoreListing listing) {
-        return new IngredientStoreListingDTO(
-                listing.getId(),
-                listing.getStoreName(),
-                listing.getStoreAddress(),
-                listing.getStorePlaceId(),
-                listing.getLatitude(),
-                listing.getLongitude(),
-                listing.getPrice(),
-                listing.getCurrency(),
-                listing.getInStock(),
-                listing.getDistanceKm(),
-                listing.getSourceProvider(),
-                listing.getCapturedAt(),
-                listing.getExpiresAt()
-        );
-    }
-
-
     @Transactional(readOnly = true)
     public List<IngredientStoreListingDTO> getIngredientStoreLocations(Long ingredientId) {
         if (!ingredientRepository.existsById(ingredientId)) {
@@ -210,7 +100,7 @@ public class IngredientService {
         return ingredientStoreListingRepository
                 .findActiveListingsByIngredientId(ingredientId, LocalDateTime.now())
                 .stream()
-                .map(this::mapStoreListingToDto)
+                .map(ingredientMapper::toStoreListingDto)
                 .sorted((left, right) -> {
                     if (left.getDistanceKm() == null && right.getDistanceKm() == null) {
                         return 0;
@@ -228,39 +118,29 @@ public class IngredientService {
 
     @Transactional
     public List<SupermarketDiscoveryDTO> discoverPopularSupermarkets(Long userId, String city, String ingredientName) {
-        return supermarketDiscoveryService.discover(userId, city, ingredientName);
+        return ingredientDiscoveryFacade.discoverPopularSupermarkets(userId, city, ingredientName);
     }
 
     @Transactional(readOnly = true)
     public List<IngredientDTO> searchIngredientsByName(String name) {
-        if (name == null || name.trim().isEmpty()) {
-            return getAllIngredients();  // Or limit to recent/top—optional
-        }
-        return ingredientRepository.findByNameContainingIgnoreCase(name.trim())
-                .stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+        return ingredientSearchService.searchByName(name);
     }
 
     @Transactional(readOnly = true)
     public List<IngredientDTO> searchIngredientByNutrient(String nutrientStr, Double minValue) {
-        if (nutrientStr == null || nutrientStr.trim().isEmpty()) {
-            throw new IllegalArgumentException("Nutrient parameter is required");
+        return ingredientSearchService.searchByNutrient(nutrientStr, minValue);
+    }
+
+    private void validateBulkCreatePayload(List<IngredientDTO> dtos) {
+        Set<String> normalizedNames = new HashSet<>();
+        for (IngredientDTO dto : dtos) {
+            String normalized = dto.getName().trim().toLowerCase();
+            if (!normalizedNames.add(normalized)) {
+                throw new BusinessException("Duplicate ingredient name in bulk payload: " + dto.getName());
+            }
+            if (ingredientRepository.existsByNameIgnoreCase(dto.getName().trim())) {
+                throw new BusinessException("Ingredient already exists: " + dto.getName());
+            }
         }
-
-        Nutrients nutrient;
-        try {
-            nutrient = Nutrients.valueOf(nutrientStr.toUpperCase().trim());
-        } catch (IllegalArgumentException e) {
-            throw new BusinessException("Invalid nutrient: " + nutrientStr +
-                    ". Valid values: " + Arrays.toString(Nutrients.values()));
-        }
-
-        double min = (minValue != null) ? minValue : 0.0;
-
-        return ingredientRepository.findByNutrientAndMinValue(nutrient, min)
-                .stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
     }
 }
